syntax = "proto3";

package examples;

option java_package = "se.sawano.grpc.examples.helloworld";
option java_multiple_files = true;
//option java_outer_classname = "SomeName";

service HelloService {
    rpc SayHello (Guest) returns (Answer);
}

service GoodbyeService {
    rpc SayGoodbye (Guest) returns (Answer);
}

service ResultService {
    rpc doProcess (Guest) returns (Result);
}

message Result {
    oneof either {
        Answer answer = 1;
        Failure failure = 2;
    }
}

message Answer {
    string message = 1;
}

message Guest {
    string name = 1;
}

enum Failure {
    reserved 1;

    NULL = 0;
    TWO_ENUM = 2;
}
